Created list items from user search and added Event Listeners. Next updates will pulling data from click events

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <div class="field has-addons">
         <div class="control">
           <input class="input" type="text" list="cities" placeholder="Search by City or Zip Code">
-          <datalist id="cities">
-          </datalist>
+          <ul id="cities">
+          </ul>
         </div>
         <div class="control">
           <a class="button is-primary">
