Continue to work on results section including 3rd party images to replace API weather icons.

--- a/index.html
+++ b/index.html
@@ -35,10 +35,8 @@
   </section>
 
   <!-- Results Section -->
-  <section class="results">
-    <div class="container">
-
-    </div>
+  <section class="results has-text-centered">
+    
   </section>
 
   <script type="text/javascript" src="main.js"></script>
