--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   </head>
   <body class="site">
   <!-- Main Section -->
-  <section class="hero site-content is-mobile">
+  <section class="hero site-content">
 
-    <div class="hero-body is-mobile">
+    <div class="hero-body">
       <div class="container has-text-centered">
         <h1 class="title">Current Weather</h1>
       </div>
@@ -42,9 +42,9 @@
   </section>
 
   <!-- Footer -->
-  <footer class="footer is-mobile">
+  <footer class="footer">
     <div class="container">
-      <div class="content has-text-centered">
+      <div class="content has-text-centered is-mobile">
           <p class="subtitle">Designed by Saul Ocampo /// <a href="http://food2fork.com/about/api" target="_blank">API provided by Weather Underground</a></p>
           <a href="https://github.com/digitalh2o2" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
           <a href="https://twitter.com/digitalh2ocode" target="_blank"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
