Fixed Cors issues

--- a/index.html
+++ b/index.html
@@ -22,15 +22,11 @@
 
     <div class="container input-field">
       <div class="field has-addons">
-        <div class="control">
+        <div class="control has-text-centered">
+          <label for="search">Search Below:</label>
           <input class="input" type="text" list="cities" placeholder="Search by City or Zip Code">
           <ul id="cities">
           </ul>
-        </div>
-        <div class="control">
-          <a class="button is-primary">
-            Search
-          </a>
         </div>
       </div>
     </div>
