Fixed API links

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <footer class="footer">
     <div class="container">
       <div class="content has-text-centered is-mobile">
-          <p class="subtitle">Designed by Saul Ocampo /// <a href="http://food2fork.com/about/api" target="_blank">API provided by Weather Underground</a></p>
+          <p class="subtitle">Designed by Saul Ocampo /// <a href="https://www.wunderground.com/weather/api/" target="_blank">API provided by Weather Underground</a></p>
           <a href="https://github.com/digitalh2o2" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
           <a href="https://twitter.com/digitalh2ocode" target="_blank"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
       </div>
