Updated formatting and removed unnecessary code

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="field has-addons">
         <div class="control has-text-centered">
           <label for="search">Search Below:</label>
-          <input class="input" type="text" list="cities" placeholder="Search by City or Zip Code">
+          <input class="input" type="text" id="search" placeholder="Search by City or Zip Code">
           <ul id="cities">
           </ul>
         </div>
@@ -48,6 +48,6 @@
     </div>
   </footer>
 
-  <script type="text/javascript" src="main.js"></script>
+  <script src="main.js"></script>
   </body>
 </html>
